--- a/ATagTargetTest/Pages/Index.cshtml
+++ b/ATagTargetTest/Pages/Index.cshtml
@@ -9,3 +9,6 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+<a href="~/assets/file.pdf" target="_blank">blankリンク</a><br />
+<a href="~/assets/file.pdf" target="ファイル😃">ファイル名リンク</a><br />
+<a href="~/assets/file.pdf" target="abcd-efgh-0000">idリンク</a><br />
